--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "imagekit": "^5.0.0",
     "method-override": "^3.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
     "path": "^0.12.7",
     "qr-image": "^3.2.0",
