--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "koe---the-kafe",
   "version": "1.0.0",
   "description": "",
-  "main": "admin.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node admin.js",
-    "dev": "nodemon admin.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,18 +13,23 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
+    "googleapis": "^137.1.0",
     "imagekit": "^5.0.0",
     "joi": "^17.13.1",
     "method-override": "^3.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
+    "npm": "^10.8.0",
     "passport": "^0.7.0",
+    "passport-google-oidc": "^0.1.0",
     "passport-local-mongoose": "^8.0.0",
     "path": "^0.12.7"
   }
